新增spark相关的依赖和测试。

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -19,3 +19,8 @@ spadas:
     baseUri: ./dataset-mini/
     # 网页请求路径
     staticUri: /dataset-mini/
+
+spark:
+  app:
+    name: spadas
+    master: local
